gac_sb/objects/AppCIRdepensePrestation__c.object
<CustomObject>
    <description>APPLICATION CIR - Les dépenses de prestation de l&apos;application CIR. Comprend les Prestataires, les Veilles, les Prises et maintenances de brevet, les Assurances de brevets et les Défenses de brevets</description>
    <fields>
        <fullName>CleUnique__c</fullName>
        <formula>RecordType.DeveloperName + Num_piece__c</formula>
        <label>Clé unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_de_depot__c</fullName>
        <label>Date de dépôt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_debut_agrement__c</fullName>
        <label>Date début d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_delivrance__c</fullName>
        <label>Date de délivrance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_agrement__c</fullName>
        <label>Date fin d&apos;agrément</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_piece__c</fullName>
        <label>Date pièce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Département</label>
        <referenceTo>AppCIRdepartement__c</referenceTo>
        <relationshipName>DepensesPrestation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lien_de_dependance__c</fullName>
        <label>Lien de dépendance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avec</fullName>
                </value>
                <value>
                    <fullName>Sans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Localisation__c</fullName>
        <label>Localisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En France</fullName>
                </value>
                <value>
                    <fullName>A l&apos;étranger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>Depenses_de_prestation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_HT__c</fullName>
        <label>Montant HT</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_retenu_option1__c</fullName>
        <description>= montant * taux SAUF si c&apos;est un prestataire d&apos;organisme public (=2 * montant * taux)</description>
        <formula>IF( $RecordType.DeveloperName = &apos;prestataire&apos; &amp;&amp; ISPICKVAL(Type_organisme__c, &apos;Public&apos;),  
	2 * Montant_HT__c * Taux_option1__c , 
	Montant_HT__c * Taux_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_retenu_option2__c</fullName>
        <description>= montant * taux SAUF si c&apos;est un prestataire d&apos;organisme public (=2 * montant * taux)</description>
        <formula>IF( $RecordType.DeveloperName = &apos;prestataire&apos; &amp;&amp; ISPICKVAL(Type_organisme__c, &apos;Public&apos;),  
	2 * Montant_HT__c * Taux_option2__c , 
	Montant_HT__c * Taux_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_retenu_option3__c</fullName>
        <description>= montant * taux SAUF si c&apos;est un prestataire d&apos;organisme public (=2 * montant * taux)</description>
        <formula>IF( $RecordType.DeveloperName = &apos;prestataire&apos; &amp;&amp; ISPICKVAL(Type_organisme__c, &apos;Public&apos;),  
	2 * Montant_HT__c * Taux_option3__c , 
	Montant_HT__c * Taux_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature_prestation__c</fullName>
        <label>Nature prestation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_brevet__c</fullName>
        <label>N° du brevet</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_piece__c</fullName>
        <label>N° pièce</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precisez_pays__c</fullName>
        <inlineHelpText>Précisez le pays si l&apos;organisme est basé à l&apos;étranger</inlineHelpText>
        <label>Précisez pays</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prestataire__c</fullName>
        <label>Prestataire</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projet</label>
        <referenceTo>AppCIRprojet__c</referenceTo>
        <relationshipName>DepensesPrestation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIREN__c</fullName>
        <label>SIREN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taux_option1__c</fullName>
        <label>Taux option 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_option2__c</fullName>
        <label>Taux option 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_option3__c</fullName>
        <label>Taux option 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_organisme__c</fullName>
        <label>Type d&apos;organisme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Agréé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>[OLD] Dépense de prestation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>prestation-{00000000}</displayFormat>
        <label>Prestation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dépenses de prestation</pluralLabel>
    <recordTypes>
        <fullName>brevetAssu</fullName>
        <active>true</active>
        <label>Assurances de brevets</label>
    </recordTypes>
    <recordTypes>
        <fullName>brevetDef</fullName>
        <active>true</active>
        <label>Défenses de brevets</label>
    </recordTypes>
    <recordTypes>
        <fullName>brevetPM</fullName>
        <active>true</active>
        <label>Prises et maintenances de brevets</label>
    </recordTypes>
    <recordTypes>
        <fullName>prestataire</fullName>
        <active>true</active>
        <label>Prestataires</label>
    </recordTypes>
    <recordTypes>
        <fullName>veille</fullName>
        <active>true</active>
        <label>Veilles</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>